Page1 completed closes #4.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 	<p>Both black and white rhinoceroses are actually gray. They are different not in color but in lip shape. The black rhino has a pointed upper lip, while its white relative has a squared lip. The difference in lip shape is related to the animals' diets. Black rhinos are browsers that get most of their sustenance from eating trees and bushes. They use their lips to pluck leaves and fruit from the branches. White rhinos graze on grasses, walking with their enormous heads and squared lips lowered to the ground.</p>
 
-	<button><a href="pages/page2.html">Next</a></button>
+	<button id="next" ><a href="pages/page2.html">Next</a></button>
+
 </body>
 </head>
 </html>
