Completed Page2 closing #3

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -1,12 +1,12 @@
 <html>
-
+    
 <head>
-    <h2> Poaching and the effects on elephants. </h2>
+    <link rel="stylesheet" type="text/css" href="../styles/styles.css">
 </head>
 
 <body>
+    <h2> Poaching and the effects on elephants. </h2>
     <img src="../images/elephant2.jpg">
-    <span>Majestic, intelligent goliath.</span>
 
     <p> 
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
@@ -26,12 +26,11 @@
     </p>
 
     <img src="../images/elephanttusks.jpg">
-    <span>An example of how elephants are poached for their tusks.</span>
 </body>
 
 <footer>
-    <a href="../index.html">Previous</a>
-    <a href="page3.html">Next</a>
+    <button><a href="../index.html">Previous</a></button>
+    <button id="next" ><a href="page3.html">Next</a></button>
 </footer>
 
 </html>
