--- a/pages/page3.html
+++ b/pages/page3.html
@@ -1,12 +1,12 @@
 <html>
-
+    
 <head>
-    <h2> Poaching and the effects on rhinos. </h2>
+    <link rel="stylesheet" type="text/css" href="../styles/styles.css">
 </head>
 
 <body>
+    <h2> Poaching and the effects on rhinos. </h2>
     <img src="../images/rhino2.jpg">
-    <span>Majestic, intelligent goliath.</span>
 
     <p> 
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
@@ -26,10 +26,11 @@
     </p>
 
     <img src="../images/rhinohorns.jpg">
-    <span>An example of how elephants are poached for their tusks.</span>
 </body>
 
 <footer>
-    <button>Back</button>
+    <button><a href="../index.html">Previous</a></button>
+    <button id="next" ><a href="page3.html">Next</a></button>
 </footer>
+
 </html>
